Add distribution info
